# mctp-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: ci.yml
.github/workflows/: ci.yml
ci/: runtests.sh
mctp/: CHANGELOG.md  Cargo.toml  README.md
mctp-estack/: CHANGELOG.md  Cargo.toml  README.md
mctp-estack/src/: control.rs  fragment.rs  i2c.rs  lib.rs  proto.rs  reassemble.rs  router.rs  routing.rs  serial.rs  usb.rs  util.rs  zerocopy_channel.rs
mctp-estack/tests/: roundtrip.rs  test_step_executor.rs
mctp-linux/: CHANGELOG.md  Cargo.toml  README.md
mctp-linux/examples/: async-req.rs  mctp-req.rs
mctp-linux/src/: lib.rs
mctp-usb-embassy/: Cargo.toml  README.md
mctp-usb-embassy/src/: lib.rs  mctpusb.rs
mctp/src/: lib.rs
pldm/: CHANGELOG.md  Cargo.toml  README.md
pldm-file/: Cargo.toml
pldm-file/examples/: client.rs  host.rs
pldm-file/src/: client.rs  host.rs  lib.rs  proto.rs
pldm-fw/: CHANGELOG.md  Cargo.toml  README.md  build.rs
pldm-fw-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
pldm-fw/src/: fd.rs  lib.rs  main.rs  pkg.rs  ua.rs
pldm-platform/: Cargo.toml  README.md
pldm-platform-util/: Cargo.toml  build.rs
pldm-platform/examples/: decodepdr.rs
pldm-platform/src/: lib.rs  proto.rs  requester.rs  state_sets.rs
pldm/src/: control.rs  lib.rs  util.rs
pldm/src/control/: requester.rs  responder.rs
standalone/: Cargo.toml
standalone/examples/: echo.rs  req.rs
standalone/src/: lib.rs  serial.rs
