[workspace]
members = [ "pldm-fw-cli", "standalone" ]
exclude = [ "mctp-usb-embassy" ]
resolver = "2"

[workspace.dependencies]
mctp = { version = "0.2", path = "mctp", default-features = false }
mctp-linux = { version = "0.2", path = "mctp-linux" }
mctp-estack = { version = "0.1", path = "mctp-estack" }
pldm = { version = "0.2", path = "pldm", default-features = false }
pldm-fw = { version = "0.2", path = "pldm-fw", default-features = false }

embedded-io-async = "0.6"
embedded-io-adapters = "0.6"
defmt = "0.3"
