[workspace]
members = [ "mctp-usb-embassy", "pldm-file", "pldm-fw-cli", "pldm-platform", "pldm-platform-util", "standalone" ]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CodeConstruct/mctp-rs"

[workspace.dependencies]
anyhow = "1.0.80"
argh = "0.1.12"
chrono = { version = "0.4", default-features = false }
crc = "3.3"
defmt = "0.3"
deku = { git = "https://github.com/CodeConstruct/deku.git", tag = "cc/deku-v0.19.1/no-alloc-3", default-features = false }
embedded-io-adapters = { version = "0.6", features = ["std", "futures-03"] }
embedded-io-async = "0.6"
embedded-io = "0.6"
enumset = "1.1"
env_logger = "0.11.3"
heapless = "0.8"
log = "0.4"
mctp-estack = { version = "0.1", path = "mctp-estack", default-features = false }
mctp-linux = { version = "0.2", path = "mctp-linux" }
mctp = { version = "0.2", path = "mctp", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
pldm-fw = { version = "0.2", path = "pldm-fw", default-features = false }
pldm-platform = { path = "pldm-platform", default-features = false }
pldm = { version = "0.2", path = "pldm", default-features = false }
proptest = "1.0.0"
simplelog = "0.12"
smol = "2.0"
uuid = { version = "1.16.0", default-features = false }
