[package]
name = "mctp-estack"
description = "Embedded MCTP stack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support", "no-std"]
rust-version = "1.82"

[dependencies]
mctp = { workspace = true }
heapless = { workspace = true }
log = { workspace = true, optional = true }
crc = { workspace = true }
embedded-io-async = { workspace = true }
defmt = { workspace = true, optional = true }
embassy-sync = "0.7"
smbus-pec = { version = "1.0", features = ["lookup-table"] }
uuid = { workspace = true }

[features]
default = ["log"]
std = ["mctp/std"]
log = ["dep:log"]
defmt = ["mctp/defmt", "dep:defmt" ]

[dev-dependencies]
proptest = { workspace = true }
embedded-io-adapters = { workspace = true }
simplelog = { workspace = true }
env_logger =  { workspace = true }
smol = { workspace = true }
