[package]
name = "mctp-estack"
description = "Embedded MCTP stack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support", "no-std"]
rust-version = "1.85"

[dependencies]
crc = { workspace = true }
defmt = { workspace = true, optional = true }
embassy-sync = { version = "0.7", optional = true }
embedded-io-async = { workspace = true, optional = true }
heapless = { workspace = true }
log = { workspace = true, optional = true }
mctp = { workspace = true }
smbus-pec = { version = "1.0", features = ["lookup-table"] }
uuid = { workspace = true }

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }
embedded-io-adapters = { workspace = true }
env_logger =  { workspace = true }
futures = "0.3"
proptest = { workspace = true }
smol = { workspace = true }


[features]
default = ["log"]
std = ["mctp/std"]
log = ["dep:log"]
defmt = ["mctp/defmt", "dep:defmt" ]
embassy = ["dep:embassy-sync", "async"]
async = ["dep:embedded-io-async"]
