[package]
name = "mctp-linux"
description = "Management Component Transport Protocol (MCTP) Linux transport"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CodeConstruct/mctp-rs"
categories = ["network-programming", "embedded", "hardware-support", "os::linux-apis"]

[dependencies]
libc = "0.2"
mctp = { workspace = true, features = ["std"] }

[[example]]
name = "mctp-req"
path = "examples/mctp-req.rs"
