[package]
name = "mctp-linux"
description = "Management Component Transport Protocol (MCTP) Linux transport"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support", "os::linux-apis"]

[dependencies]
libc = "0.2"
mctp = { workspace = true }
smol = { workspace = true }

[[example]]
name = "mctp-req"
path = "examples/mctp-req.rs"
