[package]
name = "mctp-usb-embassy"
description = "MCTP over USB transport for embassy-usb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "no-std"]
rust-version = "1.82"

[dependencies]
defmt = { workspace = true, optional = true }
embassy-futures = { version = "0.1" }
embassy-usb-driver = { version = "0.2" }
embassy-usb = { version = "0.5", default-features = false }
heapless = { workspace = true }
log = { workspace = true, optional = true }
mctp-estack = { workspace = true }
mctp = { workspace = true, default-features = false }

[features]
default = ["log"]
defmt = ["mctp-estack/defmt", "dep:defmt"]
log = ["mctp-estack/log", "dep:log"]
std = ["mctp/std"]
