[package]
name = "mctp"
description = "Management Component Transport Protocol (MCTP) base types and traits"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CodeConstruct/mctp-rs"
categories = ["network-programming", "embedded", "hardware-support", "no-std"]

[dependencies]
defmt = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
defmt = ["dep:defmt"]
