[package]
name = "mctp"
description = "Management Component Transport Protocol (MCTP) base types and traits"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support", "no-std"]

[dependencies]
defmt = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
defmt = ["dep:defmt"]
