[package]
name = "pldm-file"
description = "Platform Level Data Model (PLDM) for File Transfer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
crc = { workspace = true }
deku = { workspace = true }
enumset = { workspace = true }
log = { workspace = true }
mctp = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
pldm = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
mctp-linux = { workspace = true }
pldm-platform = { workspace = true, features = ["alloc"] }
smol = "2.0"
env_logger = "0.11.3"

[features]
default = ["std"]
alloc = ["pldm/alloc", "deku/alloc"]
std = ["alloc", "pldm/std", "mctp/std"]
