[package]
name = "pldm-fw-cli"
description = "Platform Level Data Model (PLDM) for Firmware utilities"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support", "command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true}
chrono = { workspace = true, features = ["clock"] }
enumset = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
mctp-linux = { workspace = true }
mctp = { workspace = true }
pldm-fw = { workspace = true, features = ["std"] }
