[package]
name = "pldm-fw"
description = "Platform Level Data Model (PLDM) for Firmware Update library"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
pldm = { workspace = true }
mctp = { workspace = true }
nom = { version = "7.1", default-features = false }
chrono = {version = "0.4", default-features = false }
enumset = "1.1"
uuid = { version = "1.3", features = ["v1"], default-features = false }
thiserror = { version = "1.0", optional = true }
log = "0.4"
crc = "3.0"
heapless = "0.8"
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[features]
default = ["std"]
alloc = ["pldm/alloc", "nom/alloc"]
std = ["alloc", "pldm/std", "mctp/std", "nom/std", "chrono/clock", "uuid/std", "dep:thiserror"]
