[package]
name = "pldm-fw"
description = "Platform Level Data Model (PLDM) for Firmware Update library"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
chrono = { workspace = true }
crc = { workspace = true }
enumset = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
mctp = { workspace = true }
nom = { version = "7.1", default-features = false }
num-derive = { workspace = true }
num-traits = { workspace = true }
pldm = { workspace = true }
thiserror = { version = "1.0", optional = true }
uuid = { workspace = true, features = ["v1"] }

[features]
default = ["std"]
alloc = ["pldm/alloc", "nom/alloc"]
std = ["alloc", "pldm/std", "mctp/std", "nom/std", "chrono/clock", "uuid/std", "dep:thiserror"]
