[package]
name = "pldm-platform-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
deku = { workspace = true }
env_logger =  { workspace = true }
log = { workspace = true }
mctp = { workspace = true }
mctp-linux = { workspace = true }
pldm-platform = { workspace = true, features = ["std"] }
smol = { workspace = true }

[features]
deku-debug = ["deku/logging"]
