[package]
name = "pldm-platform"
description = "Platform Level Data Model (PLDM) Platform Monitoring and Control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
chrono = { workspace = true }
deku = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
mctp = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
pldm = { workspace = true }

[dev-dependencies]
deku = { workspace = true, features = ["logging"] }
env_logger = { workspace = true }

[features]
default = ["std"]
alloc = ["pldm/alloc", "deku/alloc"]
std = ["alloc", "pldm/std", "mctp/std"]
