[package]
name = "pldm"
description = "Platform Level Data Model (PLDM) base types and functions"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming", "embedded", "hardware-support"]

[dependencies]
mctp = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[features]
default = ["std"]
alloc = []
std = ["alloc", "mctp/std"]
