[package]
name = "mctp-standalone"
description = "Standalone MCTP over serial"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming"]

[dependencies]
mctp = { workspace = true }
mctp-estack = { workspace = true }

log = { workspace = true }
embedded-io-async = { workspace = true }
smol = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
argh = { workspace = true}
simplelog = { workspace = true }
embedded-io-adapters = { workspace = true }
getrandom = "0.2"

proptest = { workspace = true }

[features]
std = ["mctp/std", "embedded-io-adapters/std"]
