[package]
name = "mctp-standalone"
description = "Standalone MCTP over serial"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["network-programming"]

[dependencies]
embedded-io-async = { workspace = true }
log = { workspace = true }
mctp-estack = { workspace = true, default-features = true, features = ["async"] }
mctp = { workspace = true }
smol = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
argh = { workspace = true}
embedded-io-adapters = { workspace = true }
getrandom = "0.2"
simplelog = { workspace = true }

[features]
std = ["mctp/std", "embedded-io-adapters/std"]
